style components, and add github api example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background-color: #ddd;">
+<div class="container-fluid" style="background-color: #ddd;margin-bottom: 5px;">
   <div style="text-align:center">
     <h1> Github Star Manager</h1>
   </div>
