--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,3 +1,5 @@
-<p>
-  card works!
-</p>
+<div class="col-xs-12">
+  <div class="card">
+    <p [innerHtml]="card.repositoryName"></p>
+  </div>
+</div>
