added repos/cards to a default list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="container-fluid" style="background-color: #ddd;margin-bottom: 5px;">
+   <nav>
+    <a routerLink="/board" routerLinkActive="active">Board</a>
+    <a routerLink="/list" routerLinkActive="active">List</a>
+    <a routerLink="/card" routerLinkActive="active">Card</a>
+  </nav>
   <div style="text-align:center">
     <h1> Github Star Manager</h1>
   </div>
