--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
   <div class="card">
-    <p [innerHtml]="card.repositoryName"></p>
+    <p [innerHtml]="card.name"></p>
   </div>
 </div>
