--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
-<div class="container-fluid" style="background-color: #ddd;margin-bottom: 5px;">
-   <nav>
-    <a routerLink="/board" routerLinkActive="active">Board</a>
-    <a routerLink="/list" routerLinkActive="active">List</a>
-    <a routerLink="/card" routerLinkActive="active">Card</a>
-  </nav>
+<div class="board-container">
   <div style="text-align:center">
-    <h1> Github Star Manager</h1>
+    <h1 class="title"> Github Star Manager</h1>
   </div>
-</div>
-<div>
-  <router-outlet></router-outlet>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
