add storage-save-sync Chrome Account

--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -4,3 +4,9 @@
   height: 100%;
 }
 
+.addLaterInfinityHorizontalScroller {
+  position: absolute;
+  overflow:scroll;
+  overflow-y: hidden;
+  white-space:nowrap;
+}
