--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     <h1 class="title"> Github Star Manager</h1>
   </div>
   <div>
-    <router-outlet></router-outlet>
+    <app-board></app-board>
   </div>
 </div>
