add pagination on github api

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
         <span [innerHtml]="list.name"></span>
       </div>
       <ng-template #editandoNome>
-        <input #inputListName
+        <input
           autofocus
           type="text"
           [(ngModel)]="list.name"
